tests/NormalTests/paczka1/fuzzy1/33463836.err
Error in line 3: bteX4EPK S550 52,2
Error in line 6: A413 A928 48,8
Error in line 4: bteX4EPK A190 20,5
Error in line 13: 8lpauedTZ3 A413 85,3
Error in line 30: Z9e5eipNx S550 -1,0
Error in line 21: 2M84gIerz A928 10,9
Error in line 36: 2M84gIerz A190 38,0
